--- a/vsts/vsts.yaml
+++ b/vsts/vsts.yaml
@@ -20,4 +20,4 @@ jobs:
       name: Hosted VS2017
       timeoutInMinutes: 180
     steps:
-      - powershell: dotnet list package --outdated
+      - powershell: dotnet list .\azureiot.sln package --outdated
