--- a/vsts/vsts.yaml
+++ b/vsts/vsts.yaml
@@ -17,103 +17,6 @@ resources:
     clean: true
 
 jobs:
-  ### Linux build ###
-  - job: LINUX
-    displayName: Linux
-    strategy:
-      # Change maxParallel to 1 make builds run in serial rather than in parallel
-      maxParallel: 3
-      matrix:
-        .Net Core 3.1:
-          FRAMEWORK: netcoreapp3.1
-
-    condition: succeeded()
-    pool:
-      name: Hosted Ubuntu 1604
-      timeoutInMinutes: 180
-    steps:
-      - task: Docker@1
-        displayName: "Start TPM Simulator"
-        inputs:
-          containerregistrytype: "Container Registry"
-          command: "Run an image"
-          imageName: aziotbld/testtpm
-          containerName: "testtpm-instance"
-
-          ports: |
-            127.0.0.1:2321:2321
-            127.0.0.1:2322:2322
-
-          restartPolicy: unlessStopped
-
-      - task: Docker@1
-        displayName: "Start Test Proxy"
-        inputs:
-          containerregistrytype: "Container Registry"
-          command: "Run an image"
-          imageName: aziotbld/testproxy
-          containerName: "testproxy-instance"
-          ports: "127.0.0.1:8888:8888"
-          restartPolicy: unlessStopped
-
-      - powershell: ./vsts/gatedBuild.ps1
-        displayName: build
-        env:
-          IOTHUB_CONN_STRING_CSHARP: $(IOTHUB-CONN-STRING-CSHARP)
-          IOTHUB_PFX_X509_THUMBPRINT: $(IOTHUB-PFX-X509-THUMBPRINT)
-          IOTHUB_X509_PFX_CERTIFICATE: $(IOTHUB-X509-PFX-CERTIFICATE)
-          IOTHUB_EVENTHUB_CONN_STRING_CSHARP: $(IOTHUB-EVENTHUB-CONN-STRING-CSHARP)
-          IOTHUB_EVENTHUB_COMPATIBLE_NAME: $(IOTHUB-EVENTHUB-COMPATIBLE-NAME)
-          IOTHUB_EVENTHUB_CONSUMER_GROUP: $(IOTHUB-EVENTHUB-CONSUMER-GROUP)
-          DPS_IDSCOPE: $(DPS-IDSCOPE)
-          DPS_GLOBALDEVICEENDPOINT: $(DPS-GLOBALDEVICEENDPOINT)
-          DPS_INDIVIDUALX509_PFX_CERTIFICATE: $(DPS-INDIVIDUALX509-PFX-CERTIFICATE)
-          DPS_GROUPX509_PFX_CERTIFICATE: $(DPS-GROUPX509-PFX-CERTIFICATE)
-          DPS_X509_PFX_CERTIFICATE_PASSWORD: $(DPS-X509-PFX-CERTIFICATE-PASSWORD)
-          DPS_GROUPX509_CERTIFICATE_CHAIN: $(DPS-GROUPX509-CERTIFICATE-CHAIN)
-          DPS_TPM_REGISTRATIONID: $(DPS-TPM-REGISTRATIONID)
-          DPS_TPM_DEVICEID: $(DPS-TPM-DEVICEID)
-          PROVISIONING_CONNECTION_STRING: $(PROVISIONING-CONNECTION-STRING)
-          STORAGE_ACCOUNT_CONNECTION_STRING: $(STORAGE-ACCOUNT-CONNECTION-STRING)
-          IOTHUB_DEVICE_CONN_STRING_INVALIDCERT: $(IOTHUB-DEVICE-CONN-STRING-INVALIDCERT)
-          IOTHUB_CONN_STRING_INVALIDCERT: $(IOTHUB-CONN-STRING-INVALIDCERT)
-          DPS_GLOBALDEVICEENDPOINT_INVALIDCERT: $(DPS-GLOBALDEVICEENDPOINT-INVALIDCERT)
-          PROVISIONING_CONNECTION_STRING_INVALIDCERT: $(PROVISIONING-CONNECTION-STRING-INVALIDCERT)
-          FAR_AWAY_IOTHUB_HOSTNAME: $(FAR-AWAY-IOTHUB-HOSTNAME)
-          CUSTOM_ALLOCATION_POLICY_WEBHOOK: $(CUSTOM-ALLOCATION-POLICY-WEBHOOK)
-          IOTHUB_PROXY_SERVER_ADDRESS: 127.0.0.1:8888
-          LA_AAD_TENANT: $(LA-AAD-TENANT)
-          LA_AAD_APP_ID: $(LA-AAD-APP-ID)
-          LA_AAD_APP_CERT_BASE64: $(LA-AAD-APP-CERT-BASE64)
-          LA_WORKSPACE_ID: $(LA-WORKSPACE-ID)
-          TARGET_BRANCH: $(System.PullRequest.TargetBranch)
-          FRAMEWORK: $(FRAMEWORK)
-
-      - task: CopyFiles@2
-        displayName: "Copy files to the artifacts folder"
-        inputs:
-          SourceFolder: "$(Build.SourcesDirectory)"
-          Contents: "**/*.trx"
-          TargetFolder: "$(Build.ArtifactStagingDirectory)"
-
-        condition: always()
-
-      - task: PublishBuildArtifacts@1
-        displayName: "Publish Artifact: testresults_linux"
-        inputs:
-          ArtifactName: testresults_linux
-
-        condition: always()
-
-      - task: PublishTestResults@2
-        displayName: "Publish Test Results **/*.trx"
-        inputs:
-          testRunner: VSTest
-          testRunTitle: "Linux Tests (netcoreapp3.1)"
-          testResultsFiles: "**/*.trx"
-
-        condition: always()
-
   ### Windows build ###
   - job: WINDOWS
     displayName: Windows
@@ -197,6 +100,8 @@ jobs:
           TargetFolder: "$(Build.ArtifactStagingDirectory)"
 
         condition: always()
+
+      - powershell: dotnet list ./azureiot.sln  package --outdated
 
       - task: PublishBuildArtifacts@1
         displayName: "Publish Artifact: testresults"
